documentacion/obtenida/ARINC 429/driver and software/PC1553-3/API/P13W32VB.BAS

Public Declare Function P13_CmdRd Lib "P13W32.DLL" Alias "_P13_CmdRd@12" (ByRef block As Integer, ByVal addrval As Long, ByVal handleval As Long) As Long
Public Declare Function P13_CmdShotWr Lib "P13W32.DLL" Alias "_P13_CmdShotWr@12" (ByVal value As Long, ByVal index As Long, ByVal handleval As Long) As Long
Public Declare Function P13_CmdSkipWr Lib "P13W32.DLL" Alias "_P13_CmdSkipWr@12" (ByVal value As Long, ByVal index As Long, ByVal handleval As Long) As Long
Public Declare Function P13_CmdStackClr Lib "P13W32.DLL" Alias "_P13_CmdStackClr@4" (ByVal handleval As Long) As Long
Public Declare Function P13_CmdStartRd Lib "P13W32.DLL" Alias "_P13_CmdStartRd@4" (ByVal handleval As Long) As Integer
Public Declare Function P13_CmdStartWr Lib "P13W32.DLL" Alias "_P13_CmdStartWr@8" (ByVal addrval As Integer, ByVal handleval As Long) As Long
Public Declare Function P13_CmdTotalRd Lib "P13W32.DLL" Alias "_P13_CmdTotalRd@4" (ByVal handleval As Long) As Long
Public Declare Function P13_CmdTotalWr Lib "P13W32.DLL" Alias "_P13_CmdTotalWr@8" (ByVal countval As Long, ByVal handleval As Long) As Long
Public Declare Function P13_CmdWr Lib "P13W32.DLL" Alias "_P13_CmdWr@12" (ByRef block As Integer, ByVal addrval As Long, ByVal handleval As Long) As Long
Public Declare Function P13_CommCall Lib "P13W32.DLL" Alias "_P13_CommCall@8" (ByVal addrval As Long, ByVal handleval As Long) As Long
Public Declare Function P13_CommCheck Lib "P13W32.DLL" Alias "_P13_CommCheck@4" (ByVal handleval As Long) As Long
Public Declare Function P13_CommDisable Lib "P13W32.DLL" Alias "_P13_CommDisable@8" (ByVal command As Integer, ByVal handleval As Long) As Long
Public Declare Function P13_CommEnable Lib "P13W32.DLL" Alias "_P13_CommEnable@4" (ByVal handleval As Long) As Long
Public Declare Function P13_CommRdL Lib "P13W32.DLL" Alias "_P13_CommRdL@8" (ByVal addrval As Long, ByVal handleval As Long) As Long
Public Declare Function P13_CommRdsW Lib "P13W32.DLL" Alias "_P13_CommRdsW@16" (ByRef valueptr As Integer, ByVal addrval As Long, ByVal count As Integer, ByVal handleval As Long) As Long
Public Declare Function P13_CommRdW Lib "P13W32.DLL" Alias "_P13_CommRdW@8" (ByVal addrval As Long, ByVal handleval As Long) As Integer
Public Declare Function P13_CommRun Lib "P13W32.DLL" Alias "_P13_CommRun@20" (ByRef dataptr As Integer, ByVal datacount As Integer, ByRef codeptr As Integer, ByVal codecount As Integer, ByVal handleval As Long) As Long
Public Declare Function P13_CommWrL Lib "P13W32.DLL" Alias "_P13_CommWrL@12" (ByVal value As Long, ByVal addrval As Long, ByVal handleval As Long) As Long
Public Declare Function P13_CommWrsW Lib "P13W32.DLL" Alias "_P13_CommWrsW@16" (ByRef valueptr As Integer, ByVal addrval As Long, ByVal count As Integer, ByVal handleval As Long) As Long
Public Declare Function P13_CommWrW Lib "P13W32.DLL" Alias "_P13_CommWrW@12" (ByVal value As Integer, ByVal addrval As Long, ByVal handleval As Long) As Long
Public Declare Function P13_DARClr Lib "P13W32.DLL" Alias "_P13_DARClr@12" (ByVal maskval As Integer, ByVal addrval As Integer, ByVal handleval As Long) As Long
Public Declare Function P13_DARGet Lib "P13W32.DLL" Alias "_P13_DARGet@12" (ByVal maskval As Integer, ByVal addrval As Integer, ByVal handleval As Long) As Long
Public Declare Function P13_DARRdL Lib "P13W32.DLL" Alias "_P13_DARRdL@8" (ByVal addrval As Integer, ByVal handleval As Long) As Long
Public Declare Function P13_DARRdW Lib "P13W32.DLL" Alias "_P13_DARRdW@8" (ByVal addrval As Integer, ByVal handleval As Long) As Integer
Public Declare Function P13_DARSet Lib "P13W32.DLL" Alias "_P13_DARSet@12" (ByVal maskval As Integer, ByVal addrval As Integer, ByVal handleval As Long) As Long
Public Declare Function P13_DARWrL Lib "P13W32.DLL" Alias "_P13_DARWrL@12" (ByVal value As Long, ByVal addrval As Integer, ByVal handleval As Long) As Long
Public Declare Function P13_DARWrW Lib "P13W32.DLL" Alias "_P13_DARWrW@12" (ByVal value As Integer, ByVal addrval As Integer, ByVal handleval As Long) As Long
Public Declare Function P13_DescAddr Lib "P13W32.DLL" Alias "_P13_DescAddr@20" (ByVal mcflag As Long, ByVal taval As Long, ByVal trflag As Long, ByVal saval As Long, ByVal handleval As Long) As Long
Public Declare Function P13_DescAlloc Lib "P13W32.DLL" Alias "_P13_DescAlloc@4" (ByVal handleval As Long) As Long
Public Declare Function P13_DescConfig Lib "P13W32.DLL" Alias "_P13_DescConfig@24" (ByVal configval As Long, ByVal mcflag As Long, ByVal taval As Long, ByVal trflag As Long, ByVal saval As Long, ByVal handleval As Long) As Long
Public Declare Function P13_DescOptRd Lib "P13W32.DLL" Alias "_P13_DescOptRd@20" (ByVal mcflag As Long, ByVal taval As Long, ByVal trflag As Long, ByVal saval As Long, ByVal handleval As Long) As Integer
Public Declare Function P13_DescOptWr Lib "P13W32.DLL" Alias "_P13_DescOptWr@24" (ByVal descopt As Integer, ByVal mcflag As Long, ByVal taval As Long, ByVal trflag As Long, ByVal saval As Long, ByVal handleval As Long) As Long
Public Declare Function P13_DescPtrRd Lib "P13W32.DLL" Alias "_P13_DescPtrRd@20" (ByVal mcflag As Long, ByVal taval As Long, ByVal trflag As Long, ByVal saval As Long, ByVal handleval As Long) As Long
Public Declare Function P13_DescPtrWr Lib "P13W32.DLL" Alias "_P13_DescPtrWr@24" (ByVal msgaddr As Long, ByVal mcflag As Long, ByVal taval As Long, ByVal trflag As Long, ByVal saval As Long, ByVal handleval As Long) As Long
Public Declare Function P13_DescRd Lib "P13W32.DLL" Alias "_P13_DescRd@24" (ByVal mcflag As Long, ByVal taval As Long, ByVal trflag As Long, ByVal saval As Long, ByRef desc As Integer, ByVal handleval As Long) As Long
Public Declare Function P13_DescWr Lib "P13W32.DLL" Alias "_P13_DescWr@24" (ByVal mcflag As Long, ByVal taval As Long, ByVal trflag As Long, ByVal saval As Long, ByRef desc As Integer, ByVal handleval As Long) As Long
Public Declare Function P13_Div Lib "P13W32.DLL" Alias "_P13_Div@8" (ByVal diva As Long, ByVal divb As Long) As Long
Public Declare Function P13_DllUsageCount Lib "P13W32.DLL" Alias "_P13_DllUsageCount@0" () As Long
Public Declare Function P13_DspBioRd Lib "P13W32.DLL" Alias "_P13_DspBioRd@4" (ByVal handleval As Long) As Integer
Public Declare Function P13_DspIntfClear Lib "P13W32.DLL" Alias "_P13_DspIntfClear@4" (ByVal handleval As Long) As Long
Public Declare Function P13_DspIntfRead Lib "P13W32.DLL" Alias "_P13_DspIntfRead@4" (ByVal handleval As Long) As Long
Public Declare Function P13_DspIntmClear Lib "P13W32.DLL" Alias "_P13_DspIntmClear@4" (ByVal handleval As Long) As Long
Public Declare Function P13_DspIntmSet Lib "P13W32.DLL" Alias "_P13_DspIntmSet@4" (ByVal handleval As Long) As Long
Public Declare Function P13_DspXfClear Lib "P13W32.DLL" Alias "_P13_DspXfClear@4" (ByVal handleval As Long) As Long
Public Declare Function P13_DspXfSet Lib "P13W32.DLL" Alias "_P13_DspXfSet@4" (ByVal handleval As Long) As Long
Public Declare Function P13_ErrorIsTaggedBC Lib "P13W32.DLL" Alias "_P13_ErrorIsTaggedBC@8" (ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function P13_ErrorIsTaggedRT Lib "P13W32.DLL" Alias "_P13_ErrorIsTaggedRT@20" (ByVal mcflag As Long, ByVal taval As Long, ByVal trflag As Long, ByVal saval As Long, ByVal handleval As Long) As Long
Public Declare Function P13_ErrorResponse Lib "P13W32.DLL" Alias "_P13_ErrorResponse@8" (ByVal responseval As Integer, ByVal handleval As Long) As Long
Public Declare Function P13_ErrorSync Lib "P13W32.DLL" Alias "_P13_ErrorSync@8" (ByVal value As Long, ByVal handleval As Long) As Long
Public Declare Function P13_ErrorTimeout Lib "P13W32.DLL" Alias "_P13_ErrorTimeout@8" (ByVal timeoutval As Integer, ByVal handleval As Long) As Long
Public Declare Function P13_ExtDinRd Lib "P13W32.DLL" Alias "_P13_ExtDinRd@4" (ByVal handleval As Long) As Long
Public Declare Function P13_ExtDinWr Lib "P13W32.DLL" Alias "_P13_ExtDinWr@8" (ByVal dinval As Long, ByVal handleval As Long) As Long
Public Declare Function P13_ExtDoutRd Lib "P13W32.DLL" Alias "_P13_ExtDoutRd@4" (ByVal handleval As Long) As Long
Public Declare Function P13_ExtDoutWr Lib "P13W32.DLL" Alias "_P13_ExtDoutWr@8" (ByVal doutval As Long, ByVal handleval As Long) As Long
Public Declare Function P13_FileClose Lib "P13W32.DLL" Alias "_P13_FileClose@4" (ByRef handle As Long) As Long
Public Declare Function P13_FileErr Lib "P13W32.DLL" Alias "_P13_FileErr@0" () As Long
Public Declare Function P13_FileErrClr Lib "P13W32.DLL" Alias "_P13_FileErrClr@0" () As Long
Public Declare Function P13_FileErrSet Lib "P13W32.DLL" Alias "_P13_FileErrSet@0" () As Long
Public Declare Function P13_FileOpenRead Lib "P13W32.DLL" Alias "_P13_FileOpenRead@4" (ByRef filename As String) As Long
Public Declare Function P13_FileOpenWrite Lib "P13W32.DLL" Alias "_P13_FileOpenWrite@4" (ByRef filename As String) As Long
Public Declare Function P13_FileRead Lib "P13W32.DLL" Alias "_P13_FileRead@12" (ByRef handle As Long, ByRef buffer As Long, ByVal count As Integer) As Long
Public Declare Function P13_FileSeek Lib "P13W32.DLL" Alias "_P13_FileSeek@8" (ByRef handle As Long, ByVal offset As Long) As Long
Public Declare Function P13_FileTell Lib "P13W32.DLL" Alias "_P13_FileTell@4" (ByRef handle As Long) As Long
Public Declare Function P13_FileWrite Lib "P13W32.DLL" Alias "_P13_FileWrite@12" (ByRef handle As Long, ByRef buffer As Long, ByVal count As Integer) As Long
Public Declare Function P13_GetHigh Lib "P13W32.DLL" Alias "_P13_GetHigh@4" (ByVal val As Long) As Integer
Public Declare Function P13_GetLow Lib "P13W32.DLL" Alias "_P13_GetLow@4" (ByVal val As Long) As Integer
Public Declare Function P13_GlobalRdW Lib "P13W32.DLL" Alias "_P13_GlobalRdW@8" (ByVal addrval As Integer, ByVal handleval As Long) As Integer
Public Declare Function P13_GlobalWrW Lib "P13W32.DLL" Alias "_P13_GlobalWrW@12" (ByVal value As Integer, ByVal addrval As Integer, ByVal handleval As Long) As Long
Public Declare Function P13_HandleDel Lib "P13W32.DLL" Alias "_P13_HandleDel@4" (ByVal handleval As Long) As Long
Public Declare Function P13_HandleGet Lib "P13W32.DLL" Alias "_P13_HandleGet@24" (ByRef memval As Long, ByRef sizval As Long, ByRef ioval As Long, ByRef irqval As Integer, ByRef drqval As Integer, ByVal handleval As Long) As Long
Public Declare Function P13_HandleGetIo Lib "P13W32.DLL" Alias "_P13_HandleGetIo@4" (ByVal ioval As Integer) As Long
Public Declare Function P13_HandleGetMem Lib "P13W32.DLL" Alias "_P13_HandleGetMem@4" (ByVal memval As Long) As Long
Public Declare Function P13_HandleIns Lib "P13W32.DLL" Alias "_P13_HandleIns@28" (ByRef cardname As String, ByVal memval As Long, ByVal ioval As Integer, ByVal irqval As Integer, ByVal drqval As Integer, ByRef happwnd As Long, ByVal uiremovalmsg As Integer) As Long
Public Declare Function P13_HandleOkay Lib "P13W32.DLL" Alias "_P13_HandleOkay@4" (ByVal handleval As Long) As Long
Public Declare Function P13_HeapAlloc Lib "P13W32.DLL" Alias "_P13_HeapAlloc@8" (ByVal wordcount As Long, ByVal handleval As Long) As Long
Public Declare Function P13_HeapAllocAll Lib "P13W32.DLL" Alias "_P13_HeapAllocAll@8" (ByRef wordcount As Long, ByVal handleval As Long) As Long
Public Declare Function P13_HeapAllocEx Lib "P13W32.DLL" Alias "_P13_HeapAllocEx@12" (ByVal configval As Integer, ByVal wordcount As Long, ByVal handleval As Long) As Long
Public Declare Function P13_HeapWipe Lib "P13W32.DLL" Alias "_P13_HeapWipe@4" (ByVal handleval As Long) As Long
Public Declare Function P13_IndirectRd Lib "P13W32.DLL" Alias "_P13_IndirectRd@8" (ByVal addrval As Integer, ByVal handleval As Long) As Integer
Public Declare Function P13_IndirectWr Lib "P13W32.DLL" Alias "_P13_IndirectWr@12" (ByVal value As Integer, ByVal addrval As Integer, ByVal handleval As Long) As Long
Public Declare Function P13_IntClear Lib "P13W32.DLL" Alias "_P13_IntClear@4" (ByVal handleval As Long) As Long
